Attempt to fix radio and checkbox buttons on product page on ios prod

--- a/frontend/src/Pages/User/Products/product.css
+++ b/frontend/src/Pages/User/Products/product.css
@@ -3,6 +3,11 @@ input[type='checkbox'] {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
 }
 
 .container {
